Replased the '*' symbol by the '●' symbol in the LoginForm.h file

--- a/TOPD/TOPD.vcxproj
+++ b/TOPD/TOPD.vcxproj
@@ -126,10 +126,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="LoginForm.cpp" />
+    <ClCompile Include="MyForm.cpp" />
     <ClCompile Include="RoundedButton.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="LoginForm.h">
+      <FileType>CppForm</FileType>
+    </ClInclude>
+    <ClInclude Include="MyForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
     <ClInclude Include="RoundedButton.h" />
@@ -137,6 +141,9 @@
   <ItemGroup>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.h</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm.resx">
+      <DependentUpon>MyForm.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
